syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";
import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUser(User) returns (google.protobuf.Empty) {}
  rpc UpdateUser(User) returns (google.protobuf.Empty) {}
  rpc GetUser(ById) returns (User) {}
  rpc GetUserList(GetUserListRequest) returns (GetUserListResponse) {}
  rpc DeleteUser(ById) returns (google.protobuf.Empty) {}
  rpc SignInUser(SignInReq) returns (SignInResp) {}
  rpc HasAccess(HasAccessReq) returns (HasAccessResp) {}
}

message User {
  string id = 1;
  string name = 2;
  string username = 3;
  string password = 4;
  string role = 5;
}

message GetUserListRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetUserListResponse {
  repeated User users = 1;
  int32 count = 2;
}

message ById {
  string id = 1;
}

message SignInResp {
  string token = 1;
}

message SignInReq {
  string username = 1;
  string password = 2;
}

message HasAccessReq {
  string token = 1;
  string obj = 2;
  string act = 3;
}

message HasAccessResp {
  bool hasAccess = 1;
}